--- a/app/src/main/res/layout/layout_location_info.xml
+++ b/app/src/main/res/layout/layout_location_info.xml
@@ -23,15 +23,21 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Tulkarm" />
 
-        <ImageView
-            android:id="@+id/playSoundButton"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:src="@drawable/ic_play_button"
+            android:orientation="horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/locationName" />
+            app:layout_constraintTop_toBottomOf="@id/locationName">
+
+            <ImageView
+                android:id="@+id/playSoundButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:src="@drawable/ic_play_button" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
