--- a/app/src/main/res/layout/activity_maps2.xml
+++ b/app/src/main/res/layout/activity_maps2.xml
@@ -1,8 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapsActivity2" />
+    tools:context=".MapsActivity2">
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MapsActivity2" />
+
+
+<!--    <Button-->
+<!--        android:id="@+id/showAllLocationButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginLeft="@dimen/twinty_dp"-->
+<!--        android:layout_marginTop="@dimen/twinty_dp"-->
+<!--        android:layout_marginRight="@dimen/twinty_dp"-->
+<!--        android:layout_marginBottom="@dimen/twinty_dp"-->
+<!--        android:background="@drawable/angle"-->
+<!--        android:onClick="showAllLocations"-->
+<!--        android:text="@string/show_all_locations"-->
+<!--        android:textColor="#fff"-->
+<!--        android:textSize="@dimen/twinty_sp"-->
+<!--        android:textStyle="italic" />-->
+
+</RelativeLayout>
