--- a/app/src/main/res/layout/layout_location_info.xml
+++ b/app/src/main/res/layout/layout_location_info.xml
@@ -7,37 +7,29 @@
     android:layout_marginLeft="50dp"
     android:layout_marginRight="50dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
+            android:layout_weight="1"
             android:id="@+id/locationName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="#DB0808"
             android:textSize="30sp"
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
             android:textStyle="italic"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Tulkarm" />
 
-        <LinearLayout
+        <ImageView
+            android:layout_margin="15dp"
+            android:id="@+id/playSoundButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/locationName">
-
-            <ImageView
-                android:id="@+id/playSoundButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
-                android:src="@drawable/ic_play_button" />
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:src="@drawable/ic_play_button" />
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
